# mla-titlecase

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: actionlint.yml  ci.yml  docs.yml  nightly-maintenance.yml  release.yml  reusable-rust-validate.yml
benches/: lexicon_lookup.rs  plugin_load.rs  titlecase.rs
crates/mla-titlecase/: Cargo.toml  README.md
crates/mla-titlecase-cli/: Cargo.toml  README.md
crates/mla-titlecase-cli/src/: checksum.rs  cli.rs  error.rs  fsutil.rs  main.rs  manifest.rs  normalize.rs  plugin_build.rs
crates/mla-titlecase-cli/src/cmd/: build_plugin.rs  diff_plugin.rs  fetch.rs  inspect_plugin.rs  list_sources.rs  mod.rs  prepare.rs  show_license.rs
crates/mla-titlecase-cli/src/sources/: cldr.rs  crossref.rs  github.rs  gnd.rs  mod.rs  musicbrainz.rs  natural_earth.rs  orcid.rs  ror.rs  scowl.rs  stopwords_iso.rs  wikidata.rs  wordfreq.rs
crates/mla-titlecase-cli/tests/: cli.rs
crates/mla-titlecase/benches/: lexicon_lookup.rs  plugin_load.rs  titlecase.rs
crates/mla-titlecase/examples/: with_plugins_fst.rs  with_plugins_json.rs
crates/mla-titlecase/src/: analysis.rs  casing.rs  classify.rs  config.rs  context.rs  error.rs  fst_store.rs  json_store.rs  lib.rs  locale.rs  plugin.rs  rules.rs  titlecase.rs  token.rs  tokenizer.rs
crates/mla-titlecase/src/lexicon/: abbreviations.rs  builtins.rs  external.rs  mod.rs  particles.rs  phrasal.rs  protected.rs  small_words.rs
crates/mla-titlecase/src/util/: mod.rs  normalize.rs  unicode.rs
crates/mla-titlecase/tests/: titlecase_engine.rs
docs/: README.md  architecture.md  lexicon-sources.md  mla-rules.md  performance.md  plugin-format.md
examples/: basic.rs  with_plugins_fst.rs
testdata/fixtures/: cldr-sample.json  crossref-sample.json  gnd-sample.json  malformed.json  musicbrainz-sample.json  natural-earth-sample.json  orcid-raw-sample.json  ror-sample.json  scowl-mini.txt  stopwords-en.json  wikidata-sample.json  wordfreq-mini.txt
testdata/golden/: mla-examples.txt  plugin-inspect.json
