[workspace]
members = ["crates/mla-titlecase", "crates/mla-titlecase-cli"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
version = "0.1.1"
repository = "https://github.com/Pajn/mla-titlecase"
homepage = "https://github.com/Pajn/mla-titlecase"
documentation = "https://docs.rs/mla-titlecase"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", default-features = false }
fst = "0.4"
flate2 = "1.1"
hex = "0.4"
memmap2 = "0.9"
mla-titlecase = { version = "0.1.1", path = "crates/mla-titlecase" }
predicates = "3.1"
quick-xml = "0.37"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmpv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.17"
thiserror = "2.0"

# `cargo release <level>` bumps both crates in lockstep, commits, tags `vX.Y.Z`,
# and pushes. Publishing is left to CI (release.yml), which triggers on the tag.
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
publish = false

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

[profile.bench]
debug = true
