[package]
name = "mla-titlecase-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for building and inspecting mla-titlecase lexicons"

[[bin]]
name = "mla-titlecase"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
mla-titlecase = { path = "../mla-titlecase" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
