[package]
name = "mla-titlecase-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI for building and inspecting mla-titlecase lexicons"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mla-titlecase-cli"
readme = "../../README.md"
keywords = ["mla", "titlecase", "cli", "lexicon"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "mla-titlecase"
path = "src/main.rs"
doc = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
hex.workspace = true
mla-titlecase.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
rmpv.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
