[package]
name = "mla-titlecase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MLA title casing library"

[dependencies]
fst.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
