[package]
name = "mla-titlecase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MLA title casing library"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["mla", "titlecase", "style", "text"]
categories = ["text-processing"]

[[example]]
name = "basic"

[[example]]
name = "with_plugins_json"

[[example]]
name = "with_plugins_fst"

[[bench]]
name = "titlecase"
harness = false

[[bench]]
name = "lexicon_lookup"
harness = false

[[bench]]
name = "plugin_load"
harness = false

[dependencies]
fst.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[lints]
workspace = true
